--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ attrs==25.4.0
 Automat==25.4.16
 beautifulsoup4==4.14.2
 billiard==4.2.2
+blis==1.3.3
 brotli==1.2.0
 bytecode==0.17.0
+catalogue==2.0.10
 celery==5.5.3
 certifi==2025.11.12
 cffi==2.0.0
@@ -19,12 +21,15 @@ click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cloudpathlib==0.23.0
+confection==0.1.5
 constantly==23.10.4
 contourpy==1.3.3
 cryptography==46.0.3
 cssselect==1.3.0
 cssselect2==0.8.0
 cycler==0.12.1
+cymem==2.0.13
 datadog==0.52.1
 ddtrace==3.18.1
 decorator==5.2.1
@@ -54,6 +59,7 @@ ipython_pygments_lexers==1.1.1
 itemadapter==0.12.2
 itemloaders==1.3.2
 jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.12.0
 jmespath==1.0.1
 JSON-log-formatter==1.1.1
@@ -63,9 +69,12 @@ langdetect==1.0.9
 legacy-cgi==2.6.4
 lxml==6.0.2
 lxml_html_clean==0.4.3
+MarkupSafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
+murmurhash==1.0.15
 numpy==2.3.5
+openai==1.61.0
 opentelemetry-api==1.38.0
 packaging==25.0
 parsel==1.10.0
@@ -73,6 +82,7 @@ parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
 playwright==1.56.0
+preshed==3.0.12
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 Protego==0.5.0
@@ -108,25 +118,35 @@ scrapy-redis==0.9.1
 service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
+smart_open==7.5.0
 sniffio==1.3.1
 soupsieve==2.8
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 sqlparse==0.5.3
+srsly==2.5.2
 stack-data==0.6.3
 text-unidecode==1.3
 textstat==0.7.3
+thinc==8.3.10
 tinycss2==1.4.0
 tinyhtml5==2.0.0
 tldextract==5.3.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 Twisted==25.5.0
+typer-slim==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
 w3lib==2.3.1
+wasabi==1.1.3
 wcwidth==0.2.14
+weasel==0.4.3
 weasyprint==66.0
 webencodings==0.5.1
 wrapt==2.0.1
