--- a/requirements.txt
+++ b/requirements.txt
@@ -116,6 +116,11 @@ Scrapy==2.13.3
 scrapy-playwright==0.0.44
 scrapy-redis==0.9.1
 service-identity==24.2.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+networkx==3.4.2
+pydot==4.0.1
 setuptools==80.9.0
 six==1.17.0
 smart_open==7.5.0
